--- a/pom.xml
+++ b/pom.xml
@@ -69,6 +69,7 @@
 		                      <exclude>javax.xml.bind:*</exclude>
 		                      <exclude>javax.xml.stream:*</exclude>
 		                      <exclude>stax:*</exclude>
+		                      <exclude>asm:asm-all</exclude>
 		                  </excludes>
 		              </artifactSet>
 		            </configuration>
@@ -148,6 +149,21 @@
             <groupId>org.codehaus.jackson</groupId>
             <artifactId>jackson-core-asl</artifactId>
             <version>1.8.5</version>
+        </dependency>
+        <dependency>
+            <groupId>org.java.net.substance</groupId>
+            <artifactId>substance</artifactId>
+            <version>6.0</version>
+            <exclusions>
+                <exclusion>
+                    <groupId>com.google.android</groupId>
+                    <artifactId>android</artifactId>
+                </exclusion>
+                <exclusion>
+                    <groupId>org.eclipse.swt.win32.win32</groupId>
+                    <artifactId>x86</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 	</dependencies>
 </project>
