--- a/pom.xml
+++ b/pom.xml
@@ -30,6 +30,27 @@
 					<target>1.5</target>
 				</configuration>
 			</plugin>
+			<plugin>
+			    <groupId>org.codehaus.gmaven</groupId>
+			    <artifactId>gmaven-plugin</artifactId>
+			    <executions>
+			        <execution>
+			            <goals>
+			                <goal>compile</goal>
+			            </goals>
+			            <configuration>
+			                <sources>
+			                    <fileset>
+			                        <directory>${pom.basedir}/src/main</directory>
+			                        <includes>
+			                            <include>**/*.groovy</include>
+			                        </includes>
+			                    </fileset>
+			                </sources>
+			            </configuration>
+			        </execution>
+			    </executions>
+			</plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-eclipse-plugin</artifactId>
@@ -76,6 +97,33 @@
 		          </execution>
 		        </executions>
 		      </plugin>
+		      
+            <plugin>
+                <artifactId>maven-antrun-plugin</artifactId>
+                <version>1.6</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>run</goal>
+                        </goals>
+                        <configuration>
+                            <target>
+                                <taskdef name="pack200" classname="org.jdesktop.deployment.ant.pack200.Pack200Task" />
+                                
+                                <pack200 src="target/${project.artifactId}-${project.version}.jar" destfile="target/${project.artifactId}-${project.version}.gz.pack" />
+                            </target>
+                        </configuration>
+                    </execution>
+                </executions>
+                <dependencies>
+                    <dependency>
+                        <groupId>org.codehaus.mojo.webstart</groupId>
+                        <artifactId>webstart-pack200-jdk15</artifactId>
+                        <version>1.0-beta-2</version>
+                    </dependency>
+                </dependencies>
+            </plugin>
 
           <plugin>
 	        <groupId>org.apache.maven.plugins</groupId>
